--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,4 +23,6 @@ tauri-plugin-shell = "2.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 crossbeam = "0.8.4"
+cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
+log = "0.4.22"
 
