Add plugins to get the ios audio working

--- a/src-tauri/gen/apple/lisa_iOS/Info.plist
+++ b/src-tauri/gen/apple/lisa_iOS/Info.plist
@@ -33,6 +33,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Please can I have mic?</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
