--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,9 @@ tauri-build = { version = "2.0.0", features = [] }
 [dependencies]
 tauri = { version = "2.0.0", features = [] }
 tauri-plugin-shell = "2.0.0"
+tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-microphone = { path = "../tauri-plugin-microphone"}
+
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 crossbeam = "0.8.4"
