--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tauri-apps/cli": ">=2.0.0",
+    "appium": "^2.11.5",
+    "appium-uiautomator2-driver": "^3.8.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "vite": "^5.0.3",
+    "webdriverio": "^9.1.2"
   }
 }
