--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tauri-apps/cli": ">=2.0.0",
     "appium": "^2.11.5",
     "appium-uiautomator2-driver": "^3.8.0",
+    "appium-xcuitest-driver": "^7.27.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
     "svelte": "^4.2.7",
