--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,4 +28,5 @@ serde_json = "1"
 crossbeam = "0.8.4"
 cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
 log = "0.4.22"
+anyhow = "1.0.89"
 
