Add start of websocket audio handling

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,4 +29,4 @@ crossbeam = "0.8.4"
 cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
 log = "0.4.22"
 anyhow = "1.0.89"
-
+tungstenite = { version = "0.24.0", features = ["native-tls"] }
